# fcgisrv

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  format-all.py
examples/fcgitest/: CMakeLists.txt
examples/fcgitest/src/handlers/: current_time_handler.cpp  current_time_handler.hpp  echo_handler.cpp  echo_handler.hpp
include/fcgisrv/: fcgisrv.hpp
lib/libfcgi/: CMakeLists.txt
lib/libfcgi/cmake/: ConfigValues.cmake
lib/libfcgi/include/: .gitignore  fcgi_config.h  fcgi_config.h.in
src/: default_authenticator.cpp  default_authenticator.hpp  default_dispatcher.cpp  default_dispatcher.hpp  fcgi_acceptor.cpp  fcgi_acceptor.hpp  fcgi_application.hpp  fcgi_server_request_response.cpp  fcgi_server_request_response.hpp  http_method.cpp  http_response.cpp  http_response.hpp  idispatcher.hpp  ihandler.hpp
src/default_handlers/: internal_server_error_handler.cpp  internal_server_error_handler.hpp  method_not_allowed_handler.cpp  method_not_allowed_handler.hpp  not_found_handler.cpp  not_found_handler.hpp  unauthorized_handler.cpp  unauthorized_handler.hpp
src/fcgisrv/: authenticator.cpp  authenticator.hpp  default_authenticator.cpp  default_authenticator.hpp  default_dispatcher.cpp  default_dispatcher.hpp  dispatcher.cpp  dispatcher.hpp  error_handler_set.cpp  error_handler_set.hpp  fcgi_acceptor.cpp  fcgi_acceptor.hpp  fcgi_application.cpp  fcgi_application.hpp  fcgi_server_request_response.cpp  fcgi_server_request_response.hpp  generic_error_handler.cpp  generic_error_handler.hpp  http_error_code.cpp  http_error_code.hpp  http_helpers.hpp  http_method.cpp  http_method.hpp  http_response.cpp  http_response.hpp  iacceptor.hpp  iapplication.hpp  iauthenticator.hpp  idispatcher.hpp  ierror_handler_provider.hpp  ierror_handler_set.hpp  iformatted_response.hpp  ihandler.hpp  ischeduler.hpp  iserver_request_response.hpp  json_response.cpp  json_response.hpp
src/fcgisrv/default_handlers/: error_handler_template.cpp  error_handler_template.hpp  internal_server_error_handler.cpp  internal_server_error_handler.hpp  method_not_allowed_handler.cpp  method_not_allowed_handler.hpp  not_found_handler.cpp  not_found_handler.hpp  unauthorized_handler.cpp  unauthorized_handler.hpp
