CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(libfcgi)

SET("FCGI_LIB_SOURCES"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fcgi_stdio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fcgiapp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fcgio.cpp"
)

SET("FCGI_INCLUDE"
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
)

IF(${WIN32})
    SET("FCGI_LIB_SOURCES" "${FCGI_LIB_SOURCES}" "${CMAKE_CURRENT_SOURCE_DIR}/src/os_win32.c")
ELSE()
    SET("FCGI_LIB_SOURCES" "${FCGI_LIB_SOURCES}" "${CMAKE_CURRENT_SOURCE_DIR}/src/os_unix.c")
ENDIF()

ADD_LIBRARY("fcgi-lib" SHARED "")

TARGET_SOURCES("fcgi-lib" PRIVATE "${FCGI_LIB_SOURCES}")

TARGET_INCLUDE_DIRECTORIES("fcgi-lib" PUBLIC "${FCGI_INCLUDE}")

IF(${WIN32})
    TARGET_LINK_LIBRARIES("fcgi-lib" PRIVATE wsock32 ws2_32)
ENDIF()
